Fix the 'until' IDEA version

--- a/build.xml
+++ b/build.xml
@@ -36,7 +36,7 @@
         <vendor url="http://dslfoundry.com/">DSLFoundry</vendor>
         <depends>jetbrains.mps.core</depends>
         <depends>jetbrains.mps.build</depends>
-        <idea-version until-build="191.*" since-build="183.1" />
+        <idea-version until-build="191.1" since-build="183.1" />
         
         <extensions defaultExtensionNs="com.intellij">
           <mps.LanguageLibrary dir="/languages" />
